# prodash

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml
benches/: usage.rs
crosstermion/: CHANGELOG.md  Cargo.toml  Makefile  README.md
crosstermion/src/: color.rs  crossterm.rs  cursor.rs  input.rs  lib.rs  terminal.rs  time.rs
crosstermium/: Cargo.toml
examples/: dashboard.rs  units.rs
examples/shared/: arg.rs  args.rs  mod.rs  smol.rs  spawn.rs
src/: config.rs  lib.rs  line.rs  messages.rs  progress.rs  throughput.rs  time.rs  traits.rs  tree.rs  tree_tests.rs  unit.rs
src/line/: draw.rs  engine.rs  mod.rs
src/progress/: key.rs  log.rs  mod.rs  utils.rs
src/render/: mod.rs
src/render/line/: draw.rs  engine.rs  mod.rs
src/render/tui/: engine.rs  mod.rs  utils.rs
src/render/tui/draw/: all.rs  information.rs  messages.rs  progress.rs
src/tree/: item.rs  key.rs  messages.rs  mod.rs  progress.rs  root.rs  tests.rs  throughput.rs
src/tui/: engine.rs  mod.rs  utils.rs
src/tui/draw/: all.rs  information.rs  messages.rs  mod.rs  progress.rs  time.rs
src/tui/engine/: features.rs  mod.rs
src/unit/: bytes.rs  display.rs  duration.rs  human.rs  mod.rs  range.rs  tests.rs  traits.rs
tests/: prodash.rs
tests/nested_progress/: key.rs
tests/progress/: mod.rs
tests/raw_progress/: mod.rs
tests/unit/: mod.rs
