[package]
name = "prodash"
version = "7.1.1"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
description = "A dashboard for visualizing progress of asynchronous and possibly blocking tasks"
edition = "2018"
include = ["src/**/*", "README.md", "LICENSE.md", "CHANGELOG.md"]
license = "MIT"
repository = "https://github.com/Byron/prodash"
readme = "README.md"

[lib]
doctest = true

[[example]]
name = "dashboard"
path = "examples/dashboard.rs"
required-features = ["tui-renderer", "tui-renderer-crossterm", "line-renderer", "line-renderer-crossterm", "ctrlc"]

[[example]]
name = "dashboard-termion"
path = "examples/dashboard.rs"
required-features = ["tui-renderer", "tui-renderer-termion", "line-renderer", "line-renderer-termion"]

[features]
default = ["log-renderer", "localtime"]
tui-renderer-termion = ["crosstermion/tui-react-termion"]
tui-renderer-crossterm = ["crosstermion/tui-react-crossterm", "crosstermion/input-async-crossterm"]
tui-renderer = ["tui",
                "unicode-segmentation",
                "unicode-width",
                "crosstermion/input-async",
                "tui-react",
                "futures-util",
                "futures-lite",
                "futures-core",
                "async-io",
                "humantime"]
line-renderer = ["crosstermion/color", "humantime", "unicode-width"]
line-renderer-crossterm = ["crosstermion/crossterm"]
line-renderer-termion = ["crosstermion/termion"]

log-renderer = ["log"]
localtime = ["time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dashmap = "3.4.3"
parking_lot = "0.11.0"

# with-logging
log = { version = "0.4.8", optional = true }

# tui-renderer
tui = { version = "0.10.0", optional = true, default-features = false }
tui-react = { version = "0.10.0", optional = true }
futures-core = { version = "0.3.4", optional = true, default-features = false }
futures-util = { version = "0.3.4", optional = true, default-features = false }
futures-lite = { version = "0.1.5", optional = true }
humantime = { version = "2.0.0", optional = true }
unicode-segmentation = { version = "1.6.0", optional = true }
unicode-width = { version = "0.1.7", optional = true }
crosstermion = { version = "0.3.0", optional = true, default-features = false }
async-io = { version = "0.1.5", optional = true }

# localtime support for tui-renderer
time = { version = "0.2.9", optional = true, features = ["std"], default-features = false }

# line renderer
ctrlc = { version = "3.1.4", optional = true, default-features = false, features = ['termination'] }

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
rand = "0.7.3"
env_logger = { version = "0.7.1", default-features = false, features = ["termcolor", "atty", "humantime"] }
criterion = { version = "0.3.1", default-features = false }
futures-util = { version = "0.3.4", default-features = false }
smol = { version = "0.2.0", default-features = false }
argh = "0.1.3"
futures = "0.3.5"
atty = "0.2.14"
blocking = "0.5.0"

[[bench]]
name = "usage"
path = "benches/usage.rs"
harness = false

[workspace]
members = ["crosstermion"]
