[package]
name = "prodash"
version = "12.0.0"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
description = "A dashboard for visualizing progress of asynchronous and possibly blocking tasks"
edition = "2018"
include = ["src/**/*", "README.md", "LICENSE.md", "CHANGELOG.md"]
license = "MIT"
repository = "https://github.com/Byron/prodash"
readme = "README.md"

[lib]
doctest = true

[[example]]
name = "dashboard"
path = "examples/dashboard.rs"
required-features = ["render-tui", "render-tui-crossterm", "render-line", "render-line-crossterm", "ctrlc"]

[[example]]
name = "dashboard-termion"
path = "examples/dashboard.rs"
required-features = ["render-tui", "render-tui-termion", "render-line", "render-line-termion"]

[[example]]
name = "units"
path = "examples/units.rs"
required-features = [
    "unit-bytes",
    "unit-duration",
    "unit-human",
    "render-tui",
    "render-tui-crossterm",
    "render-line",
    "render-line-crossterm",
    "ctrlc"
]

[features]
default = ["progress-tree", "progress-tree-log", "localtime"]
progress-tree = ["dashmap", "parking_lot"]
progress-tree-log = ["log"]
progress-log = ["log"]
unit-bytes = ["bytesize"]
unit-human = ["human_format"]
unit-duration = ["compound_duration"]
render-tui-termion = ["crosstermion/tui-react-termion"]
render-tui-crossterm = ["crosstermion/tui-react-crossterm", "crosstermion/input-async-crossterm"]
render-tui = ["tui",
    "unicode-segmentation",
    "unicode-width",
    "crosstermion/input-async",
    "tui-react",
    "futures-lite",
    "futures-core",
    "async-io",
    "humantime"]
render-line = ["crosstermion/color", "humantime", "unicode-width"]
render-line-crossterm = ["crosstermion/crossterm"]
render-line-termion = ["crosstermion/termion"]

localtime = ["time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dashmap = { version = "4.0.1", optional = true, default-features = false }
parking_lot = { version = "0.11.0", optional = true, default-features = false }

# with-logging
log = { version = "0.4.8", optional = true }

# render-tui
tui = { version = "0.14.0", optional = true, default-features = false }
tui-react = { version = "0.14.0", optional = true }
futures-core = { version = "0.3.4", optional = true, default-features = false }
futures-lite = { version = "1.5.0", optional = true }
humantime = { version = "2.0.0", optional = true }
unicode-segmentation = { version = "1.6.0", optional = true }
unicode-width = { version = "0.1.7", optional = true }
crosstermion = { version = "0.6.0", optional = true, default-features = false }
async-io = { version = "1.0.0", optional = true }

# localtime support for render-tui
time = { version = "0.2.9", optional = true, features = ["std"], default-features = false }

# line renderer
ctrlc = { version = "3.1.4", optional = true, default-features = false, features = ['termination'] }

# units
bytesize = { version = "1.0.1", optional = true }
human_format = { version = "1.0.3", optional = true }
compound_duration = { version = "1.2.0", optional = true }

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
rand = "0.8.1"
env_logger = { version = "0.8.2", default-features = false, features = ["termcolor", "atty", "humantime"] }
criterion = { version = "0.3.1", default-features = false }
futures-util = { version = "0.3.4", default-features = false }
argh = "0.1.3"
futures = "0.3.5"
atty = "0.2.14"
blocking = "1.0.0"
once_cell = "1.4.0"
async-executor = "1.1.0"
async-io = "1.1.0"

[[bench]]
name = "usage"
path = "benches/usage.rs"
harness = false

[workspace]
members = ["crosstermion"]
