[package]
name = "crosstermion"
version = "0.1.1"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
description = "The unification of crossterm and termium behind a common facade for use with feature flags"
edition = "2018"
license = "MIT"
repository = "https://github.com/Byron/prodash"
readme = "README.md"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]

[features]
default = []

input-async = ["futures-channel", "futures-util", "futures-executor", "crossterm/event-stream"]
input-thread = ["crossbeam-channel"]
input-thread-flume = ["flume"]

tui-termion = ["tui", "tui-termion-backend", "termion"]
tui-react-termion = ["tui-react", "tui", "tui-termion-backend", "termion"]

tui-crossterm = ["tui", "tui-crossterm-backend", "crossterm"]
tui-react-crossterm = ["tui-react", "tui", "tui-crossterm-backend", "crossterm"]

tui-termion-backend = ["tui/termion"] # redirect is needed to allow us to #[cfg(feature = "…")] against it. You can't see featuers of crates
tui-crossterm-backend = ["tui/crossterm"]


[dependencies]
crossterm = { version = "0.17.5", optional = true, default-features = false }
termion = { version = "1.5.5", optional = true, default-features = false }
futures-channel = { version = "0.3.5", optional = true, default-features = false, features = ["std", "sink"] }
futures-util = { version = "0.3.5", optional = true, default-features = false, features = ["sink"] }
futures-executor = { version = "0.3.5", default-features = false, optional = true, features = ["std"] }
tui = { version = "0.9.5", optional = true, default-features = false }
tui-react = { version = "0.4.0", optional = true, default-features = false }
crossbeam-channel = { version = "0.4.2", optional = true, default-features = false }
flume = { version = "0.7.1", optional = true }

[package.metadata.docs.rs]
all-features = true
